--- a/themes/phase-genomics/assets/scss/_page.scss
+++ b/themes/phase-genomics/assets/scss/_page.scss
@@ -3,7 +3,7 @@
   margin-bottom: 40px;
   &__title {
     color: $secondary-color;
-    line-height: 1.2;
+    line-height: 1.24;
   }
   &__subtitle {
     font-size: 20px;
