--- a/themes/phase-genomics/assets/scss/page/_home.scss
+++ b/themes/phase-genomics/assets/scss/page/_home.scss
@@ -46,7 +46,7 @@
 				overflow: hidden;
 				&:hover {
 					.home--products__cell__inner--mask {
-						top: calc(-100% - 10px);
+						top: -100%;
 					}
 					.button.border {
 						background: $secondary-color;
